src/main/resources/tests/Semantics/good/functionParamType2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
 type recordTest is record
       Field1 : integer;
    end record;
 X : recordTest ;
 Y : integer;
function ExampleFunction (X : recordTest) return integer is
begin
   return X.Field1 + 1;
end ExampleFunction;
begin
   Y := ExampleFunction (X); -- Call the function with X as the argument which is a integer
end ExampleProcedure;
